<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">NwuNet</string>
    <string name="tile_label">NwuNet</string>
    <string name="tile_status_check">Checking&#8230;</string>
    <string name="tile_status_loggin">Logining&#8230;</string>
    <string name="tile_status_ok">OK</string>
    <string name="tile_status_not">NotNwu</string>
    <string name="tile_status_failed">Failed</string>
    <string name="tile_status_conflict">Conflict</string>
    <string name="tile_status_no_net_conn">NoNet</string>
    <!--app内文字-->
    <string name="hello_nwunet_by_shiqingk">请先保存新旧校园网的账号密码,然后在状态栏添加NwuNet按钮，之后每次连上校园网之后，点它开启新世界吧！！！---shiqingk</string>
    <string name="value_accountNew">存入新账号</string>
    <string name="value_read_saved_account">读取</string>
    <string name="value_accountOld">存入旧账号</string>
    <string name="value_btn_toWeb">浏览器登录</string>
    <string name="btn_value_login">登录</string>
    <string name="value_passwd">密码</string>
    <string name="value_account">账号</string>
    <string name="textView_bottom_description">说明\n
                                                1.NotNwu---非校园网\n
                                                2.Failed-------nwunet----------密码错误\n
                                                3.Conflict----new-student--密码错误或设备已满\n
                                                4.建议点击通知栏顶部图标登录，app内登录按钮仅为备用，点击后没网，多半设备已满
    </string>
</resources>
