<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.shuaiqing.nwunet.activity.MainActivity">
    <!--提示-->
    <View
            android:layout_width="wrap_content"
            android:layout_height="309dp" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:id="@+id/view_top"/>
    <TextView
            android:id="@+id/textTop"
            android:layout_width="349dp"
            android:layout_height="100dp"
            android:text="@string/hello_nwunet_by_shiqingk"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="24dp" android:textSize="18sp"/>
    <!--账号-->
    <TextView
            android:text="@string/value_account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/textViewAccount"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="137dp" android:layout_alignStart="@+id/textViewPasswd"
            android:layout_marginStart="-1dp"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextAccount"
            android:layout_alignEnd="@+id/BtnLogin" android:layout_below="@+id/textTop" android:layout_marginTop="0dp"
            android:layout_marginEnd="-3dp" tools:ignore="LabelFor"/>
    <!--密码-->
    <TextView
            android:text="@string/value_passwd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/textViewPasswd"
            android:textSize="24sp"
            android:layout_above="@+id/getDataBtn" android:layout_alignEnd="@+id/getDataBtn"
            android:layout_marginEnd="8dp" android:layout_marginBottom="0dp"/>
    <EditText
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswd"
            android:textSize="18sp"
            android:layout_alignStart="@+id/editTextAccount" android:layout_below="@+id/textViewAccount"
            android:layout_marginTop="0dp" android:layout_marginStart="3dp"
            tools:ignore="LabelFor"/>
    <!--底部按钮-->
    <Button
            android:text="@string/value_read_saved_account"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:id="@+id/getDataBtn"
            android:textSize="18sp"
            android:layout_alignBottom="@+id/view_top"
            android:layout_alignStart="@+id/BtnSetOld"/>
    <Button
            android:text="@string/btn_value_login"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:id="@+id/BtnLogin"
            android:textSize="18sp"
            android:layout_alignBottom="@+id/view_top" android:layout_alignStart="@+id/BtnSetNew"/>
    <Button
            android:text="@string/value_accountOld"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/BtnSetOld"
            android:textSize="18sp"
            android:layout_below="@+id/view_top"
            android:layout_alignParentStart="true" android:layout_marginStart="80dp"/>
    <Button
            android:text="@string/value_accountNew"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/BtnSetNew"
            android:textSize="18sp"
            android:layout_below="@+id/view_top" android:layout_alignParentEnd="true" android:layout_marginEnd="80dp"/>
    <Button
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:id="@+id/BtnWeb"
            android:textSize="18sp"
            android:layout_alignBottom="@+id/view_top"
            android:layout_alignStart="@+id/BtnSetOld" android:layout_marginStart="0dp"
            android:layout_marginBottom="-128dp" android:text="@string/value_btn_toWeb"/>
    <View
            android:layout_width="wrap_content"
            android:layout_height="124dp" android:layout_alignParentStart="true"
            android:id="@+id/view_bottom" android:layout_below="@+id/view_top"/>
    <TextView
            android:text="@string/textView_bottom_description"
            android:layout_width="380dp"
            android:layout_height="176dp"
            android:id="@+id/textView_bottom_description"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" android:layout_alignParentBottom="true" android:layout_marginBottom="105dp"/>
    <TextView
            android:layout_width="161dp"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true" android:id="@+id/textView_message"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp"/>

</RelativeLayout>
